src/parser/zparser.output
Terminals which are not used

   TYPE_NAME
   REGISTER
   ELLIPSIS
   GOTO


State 287 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | HEX_CONSTANT
    3                   | OCT_CONSTANT
    4                   | DEC_CONSTANT
    5                   | FLT_CONSTANT
    6                   | STRING_LITERAL
    7                   | '(' expression ')'

    8 postfix_expression: primary_expression
    9                   | postfix_expression '[' expression ']'
   10                   | postfix_expression '(' ')'
   11                   | postfix_expression '(' argument_expression_list ')'
   12                   | postfix_expression '.' IDENTIFIER
   13                   | postfix_expression PTR_OP IDENTIFIER
   14                   | postfix_expression INC_OP
   15                   | postfix_expression DEC_OP

   16 argument_expression_list: assignment_expression
   17                         | argument_expression_list ',' assignment_expression

   18 unary_expression: postfix_expression
   19                 | INC_OP unary_expression
   20                 | DEC_OP unary_expression
   21                 | '-' cast_expression
   22                 | '&' cast_expression
   23                 | '*' cast_expression
   24                 | '~' cast_expression
   25                 | '!' cast_expression
   26                 | SIZEOF unary_expression
   27                 | SIZEOF '(' CHAR ')'
   28                 | SIZEOF '(' SHORT ')'
   29                 | SIZEOF '(' INT ')'
   30                 | SIZEOF '(' LONG ')'
   31                 | SIZEOF '(' FLOAT ')'

   32 cast_expression: unary_expression

   33 multiplicative_expression: cast_expression
   34                          | multiplicative_expression '*' cast_expression
   35                          | multiplicative_expression '/' cast_expression
   36                          | multiplicative_expression '%' cast_expression

   37 additive_expression: multiplicative_expression
   38                    | additive_expression '+' multiplicative_expression
   39                    | additive_expression '-' multiplicative_expression

   40 shift_expression: additive_expression
   41                 | shift_expression LEFT_OP additive_expression
   42                 | shift_expression RIGHT_OP additive_expression

   43 relational_expression: shift_expression
   44                      | relational_expression '<' shift_expression
   45                      | relational_expression '>' shift_expression
   46                      | relational_expression LE_OP shift_expression
   47                      | relational_expression GE_OP shift_expression

   48 equality_expression: relational_expression
   49                    | equality_expression EQ_OP relational_expression
   50                    | equality_expression NE_OP relational_expression

   51 and_expression: equality_expression
   52               | and_expression '&' equality_expression

   53 exclusive_or_expression: and_expression
   54                        | exclusive_or_expression '^' and_expression

   55 inclusive_or_expression: exclusive_or_expression
   56                        | inclusive_or_expression '|' exclusive_or_expression

   57 logical_and_expression: inclusive_or_expression
   58                       | logical_and_expression AND_OP inclusive_or_expression

   59 logical_or_expression: logical_and_expression
   60                      | logical_or_expression OR_OP logical_and_expression

   61 conditional_expression: logical_or_expression

   62 assignment_expression: conditional_expression
   63                      | unary_expression assignment_operator assignment_expression

   64 assignment_operator: ASSIGN_OP
   65                    | MUL_ASSIGN
   66                    | DIV_ASSIGN
   67                    | MOD_ASSIGN
   68                    | ADD_ASSIGN
   69                    | SUB_ASSIGN
   70                    | LEFT_ASSIGN
   71                    | RIGHT_ASSIGN
   72                    | AND_ASSIGN
   73                    | XOR_ASSIGN
   74                    | OR_ASSIGN

   75 expression: assignment_expression
   76           | expression ',' assignment_expression

   77 constant_expression: conditional_expression

   78 declaration: declaration_specifiers init_declarator_list ';'

   79 declaration_specifiers: storage_class_specifier
   80                       | storage_class_specifier declaration_specifiers
   81                       | type_specifier
   82                       | type_specifier declaration_specifiers
   83                       | type_qualifier
   84                       | type_qualifier declaration_specifiers

   85 init_declarator_list: init_declarator
   86                     | init_declarator_list ',' init_declarator

   87 init_declarator: declarator
   88                | declarator ASSIGN_OP initializer

   89 storage_class_specifier: TYPEDEF
   90                        | EXTERN
   91                        | STATIC
   92                        | AUTO

   93 type_specifier: VOID
   94               | CHAR
   95               | SHORT
   96               | INT
   97               | LONG
   98               | FLOAT
   99               | DOUBLE
  100               | SIGNED
  101               | UNSIGNED
  102               | struct_or_union_specifier
  103               | enum_specifier

  104 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  105                          | struct_or_union IDENTIFIER

  106 struct_or_union: STRUCT
  107                | UNION

  108 struct_declaration_list: struct_declaration
  109                        | struct_declaration_list struct_declaration

  110 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  111 specifier_qualifier_list: type_specifier specifier_qualifier_list
  112                         | type_specifier
  113                         | type_qualifier specifier_qualifier_list
  114                         | type_qualifier

  115 struct_declarator_list: struct_declarator

  116 struct_declarator: declarator

  117 enum_specifier: ENUM '{' enumerator_list '}'
  118               | ENUM IDENTIFIER '{' enumerator_list '}'
  119               | ENUM IDENTIFIER

  120 enumerator_list: enumerator
  121                | enumerator_list ',' enumerator

  122 enumerator: IDENTIFIER
  123           | IDENTIFIER ASSIGN_OP constant_expression

  124 type_qualifier: CONST
  125               | VOLATILE

  126 declarator: pointer direct_declarator
  127           | direct_declarator

  128 direct_declarator: IDENTIFIER
  129                  | direct_declarator '[' constant_expression ']'
  130                  | direct_declarator '[' ']'
  131                  | direct_declarator '(' parameter_type_list ')'
  132                  | direct_declarator '(' identifier_list ')'
  133                  | direct_declarator '(' ')'

  134 pointer: '*'
  135        | '*' type_qualifier
  136        | '*' pointer

  137 parameter_type_list: parameter_list

  138 parameter_list: parameter_declaration
  139               | parameter_list ',' parameter_declaration

  140 parameter_declaration: declaration_specifiers declarator
  141                      | declaration_specifiers abstract_declarator
  142                      | declaration_specifiers

  143 identifier_list: IDENTIFIER
  144                | identifier_list ',' IDENTIFIER

  145 abstract_declarator: pointer

  146 initializer: assignment_expression
  147            | '{' initializer_list '}'
  148            | '{' initializer_list ',' '}'

  149 initializer_list: initializer
  150                 | initializer_list ',' initializer

  151 statement: labeled_statement
  152          | compound_statement
  153          | expression_statement
  154          | selection_statement
  155          | iteration_statement
  156          | jump_statement

  157 labeled_statement: CASE constant_expression ':' statement
  158                  | DEFAULT ':' statement

  159 compound_statement: '{' '}'
  160                   | '{' statement_list '}'
  161                   | '{' declaration_list statement_list '}'

  162 declaration_list: declaration
  163                 | declaration_list declaration

  164 statement_list: statement
  165               | statement_list statement

  166 expression_statement: ';'
  167                     | expression ';'

  168 selection_statement: IF '(' expression ')' statement
  169                    | IF '(' expression ')' statement ELSE statement
  170                    | SWITCH '(' expression ')' statement

  171 iteration_statement: WHILE '(' expression ')' statement
  172                    | DO statement WHILE '(' expression ')' ';'
  173                    | FOR '(' expression_statement expression_statement expression ')' statement

  174 jump_statement: CONTINUE ';'
  175               | BREAK ';'
  176               | RETURN ';'
  177               | RETURN expression ';'

  178 translation_unit: external_declaration
  179                 | translation_unit external_declaration

  180 external_declaration: function_definition
  181                     | declaration

  182 function_definition: declaration_specifiers declarator compound_statement
  183                    | declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
'!' (33) 25
'%' (37) 36
'&' (38) 22 52
'(' (40) 7 10 11 27 28 29 30 31 131 132 133 168 169 170 171 172 173
')' (41) 7 10 11 27 28 29 30 31 131 132 133 168 169 170 171 172 173
'*' (42) 23 34 134 135 136
'+' (43) 38
',' (44) 17 76 86 121 139 144 148 150
'-' (45) 21 39
'.' (46) 12
'/' (47) 35
':' (58) 157 158
';' (59) 78 110 166 167 172 174 175 176 177
'<' (60) 44
'>' (62) 45
'[' (91) 9 129 130
']' (93) 9 129 130
'^' (94) 54
'{' (123) 104 117 118 147 148 159 160 161
'|' (124) 56
'}' (125) 104 117 118 147 148 159 160 161
'~' (126) 24
error (256)
IDENTIFIER (258) 1 12 13 104 105 118 119 122 123 128 143 144
HEX_CONSTANT (259) 2
OCT_CONSTANT (260) 3
DEC_CONSTANT (261) 4
FLT_CONSTANT (262) 5
STRING_LITERAL (263) 6
PTR_OP (264) 13
INC_OP (265) 14 19
DEC_OP (266) 15 20
LEFT_OP (267) 41
RIGHT_OP (268) 42
LE_OP (269) 46
GE_OP (270) 47
EQ_OP (271) 49
NE_OP (272) 50
ASSIGN_OP (273) 64 88 123
AND_OP (274) 58
OR_OP (275) 60
MUL_ASSIGN (276) 65
DIV_ASSIGN (277) 66
MOD_ASSIGN (278) 67
ADD_ASSIGN (279) 68
SUB_ASSIGN (280) 69
LEFT_ASSIGN (281) 70
RIGHT_ASSIGN (282) 71
AND_ASSIGN (283) 72
XOR_ASSIGN (284) 73
OR_ASSIGN (285) 74
TYPE_NAME (286)
SIZEOF (287) 26 27 28 29 30 31
TYPEDEF (288) 89
EXTERN (289) 90
STATIC (290) 91
AUTO (291) 92
REGISTER (292)
CHAR (293) 27 94
SHORT (294) 28 95
INT (295) 29 96
LONG (296) 30 97
SIGNED (297) 100
UNSIGNED (298) 101
FLOAT (299) 31 98
DOUBLE (300) 99
CONST (301) 124
VOLATILE (302) 125
VOID (303) 93
STRUCT (304) 106
UNION (305) 107
ENUM (306) 117 118 119
ELLIPSIS (307)
CASE (308) 157
DEFAULT (309) 158
IF (310) 168 169
ELSE (311) 169
SWITCH (312) 170
WHILE (313) 171 172
DO (314) 172
FOR (315) 173
GOTO (316)
CONTINUE (317) 174
BREAK (318) 175
RETURN (319) 176 177


Nonterminals, with rules where they appear

$accept (87)
    on left: 0
primary_expression (88)
    on left: 1 2 3 4 5 6 7, on right: 8
postfix_expression (89)
    on left: 8 9 10 11 12 13 14 15, on right: 9 10 11 12 13 14 15 18
argument_expression_list (90)
    on left: 16 17, on right: 11 17
unary_expression (91)
    on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31,
    on right: 19 20 26 32 63
cast_expression (92)
    on left: 32, on right: 21 22 23 24 25 33 34 35 36
multiplicative_expression (93)
    on left: 33 34 35 36, on right: 34 35 36 37 38 39
additive_expression (94)
    on left: 37 38 39, on right: 38 39 40 41 42
shift_expression (95)
    on left: 40 41 42, on right: 41 42 43 44 45 46 47
relational_expression (96)
    on left: 43 44 45 46 47, on right: 44 45 46 47 48 49 50
equality_expression (97)
    on left: 48 49 50, on right: 49 50 51 52
and_expression (98)
    on left: 51 52, on right: 52 53 54
exclusive_or_expression (99)
    on left: 53 54, on right: 54 55 56
inclusive_or_expression (100)
    on left: 55 56, on right: 56 57 58
logical_and_expression (101)
    on left: 57 58, on right: 58 59 60
logical_or_expression (102)
    on left: 59 60, on right: 60 61
conditional_expression (103)
    on left: 61, on right: 62 77
assignment_expression (104)
    on left: 62 63, on right: 16 17 63 75 76 146
assignment_operator (105)
    on left: 64 65 66 67 68 69 70 71 72 73 74, on right: 63
expression (106)
    on left: 75 76, on right: 7 9 76 167 168 169 170 171 172 173 177
constant_expression (107)
    on left: 77, on right: 123 129 157
declaration (108)
    on left: 78, on right: 162 163 181
declaration_specifiers (109)
    on left: 79 80 81 82 83 84, on right: 78 80 82 84 140 141 142 182
init_declarator_list (110)
    on left: 85 86, on right: 78 86
init_declarator (111)
    on left: 87 88, on right: 85 86
storage_class_specifier (112)
    on left: 89 90 91 92, on right: 79 80
type_specifier (113)
    on left: 93 94 95 96 97 98 99 100 101 102 103, on right: 81 82
    111 112
struct_or_union_specifier (114)
    on left: 104 105, on right: 102
struct_or_union (115)
    on left: 106 107, on right: 104 105
struct_declaration_list (116)
    on left: 108 109, on right: 104 109
struct_declaration (117)
    on left: 110, on right: 108 109
specifier_qualifier_list (118)
    on left: 111 112 113 114, on right: 110 111 113
struct_declarator_list (119)
    on left: 115, on right: 110
struct_declarator (120)
    on left: 116, on right: 115
enum_specifier (121)
    on left: 117 118 119, on right: 103
enumerator_list (122)
    on left: 120 121, on right: 117 118 121
enumerator (123)
    on left: 122 123, on right: 120 121
type_qualifier (124)
    on left: 124 125, on right: 83 84 113 114 135
declarator (125)
    on left: 126 127, on right: 87 88 116 140 182 183
direct_declarator (126)
    on left: 128 129 130 131 132 133, on right: 126 127 129 130 131
    132 133
pointer (127)
    on left: 134 135 136, on right: 126 136 145
parameter_type_list (128)
    on left: 137, on right: 131
parameter_list (129)
    on left: 138 139, on right: 137 139
parameter_declaration (130)
    on left: 140 141 142, on right: 138 139
identifier_list (131)
    on left: 143 144, on right: 132 144
abstract_declarator (132)
    on left: 145, on right: 141
initializer (133)
    on left: 146 147 148, on right: 88 149 150
initializer_list (134)
    on left: 149 150, on right: 147 148 150
statement (135)
    on left: 151 152 153 154 155 156, on right: 157 158 164 165 168
    169 170 171 172 173
labeled_statement (136)
    on left: 157 158, on right: 151
compound_statement (137)
    on left: 159 160 161, on right: 152 182 183
declaration_list (138)
    on left: 162 163, on right: 161 163
statement_list (139)
    on left: 164 165, on right: 160 161 165
expression_statement (140)
    on left: 166 167, on right: 153 173
selection_statement (141)
    on left: 168 169 170, on right: 154
iteration_statement (142)
    on left: 171 172 173, on right: 155
jump_statement (143)
    on left: 174 175 176 177, on right: 156
translation_unit (144)
    on left: 178 179, on right: 0 179
external_declaration (145)
    on left: 180 181, on right: 178 179
function_definition (146)
    on left: 182 183, on right: 180


state 0

    0 $accept: . translation_unit $end
   78 declaration: . declaration_specifiers init_declarator_list ';'
   79 declaration_specifiers: . storage_class_specifier
   80                       | . storage_class_specifier declaration_specifiers
   81                       | . type_specifier
   82                       | . type_specifier declaration_specifiers
   83                       | . type_qualifier
   84                       | . type_qualifier declaration_specifiers
   89 storage_class_specifier: . TYPEDEF
   90                        | . EXTERN
   91                        | . STATIC
   92                        | . AUTO
   93 type_specifier: . VOID
   94               | . CHAR
   95               | . SHORT
   96               | . INT
   97               | . LONG
   98               | . FLOAT
   99               | . DOUBLE
  100               | . SIGNED
  101               | . UNSIGNED
  102               | . struct_or_union_specifier
  103               | . enum_specifier
  104 struct_or_union_specifier: . struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  105                          | . struct_or_union IDENTIFIER
  106 struct_or_union: . STRUCT
  107                | . UNION
  117 enum_specifier: . ENUM '{' enumerator_list '}'
  118               | . ENUM IDENTIFIER '{' enumerator_list '}'
  119               | . ENUM IDENTIFIER
  124 type_qualifier: . CONST
  125               | . VOLATILE
  126 declarator: . pointer direct_declarator
  127           | . direct_declarator
  128 direct_declarator: . IDENTIFIER
  129                  | . direct_declarator '[' constant_expression ']'
  130                  | . direct_declarator '[' ']'
  131                  | . direct_declarator '(' parameter_type_list ')'
  132                  | . direct_declarator '(' identifier_list ')'
  133                  | . direct_declarator '(' ')'
  134 pointer: . '*'
  135        | . '*' type_qualifier
  136        | . '*' pointer
  178 translation_unit: . external_declaration
  179                 | . translation_unit external_declaration
  180 external_declaration: . function_definition
  181                     | . declaration
  182 function_definition: . declaration_specifiers declarator compound_statement
  183                    | . declarator compound_statement

    IDENTIFIER  shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    CHAR        shift, and go to state 6
    SHORT       shift, and go to state 7
    INT         shift, and go to state 8
    LONG        shift, and go to state 9
    SIGNED      shift, and go to state 10
    UNSIGNED    shift, and go to state 11
    FLOAT       shift, and go to state 12
    DOUBLE      shift, and go to state 13
    CONST       shift, and go to state 14
    VOLATILE    shift, and go to state 15
    VOID        shift, and go to state 16
    STRUCT      shift, and go to state 17
    UNION       shift, and go to state 18
    ENUM        shift, and go to state 19
    '*'         shift, and go to state 20

    declaration                go to state 21
    declaration_specifiers     go to state 22
    storage_class_specifier    go to state 23
    type_specifier             go to state 24
    struct_or_union_specifier  go to state 25
    struct_or_union            go to state 26
    enum_specifier             go to state 27
    type_qualifier             go to state 28
    declarator                 go to state 29
    direct_declarator          go to state 30
    pointer                    go to state 31
    translation_unit           go to state 32
    external_declaration       go to state 33
    function_definition        go to state 34


state 1

  128 direct_declarator: IDENTIFIER .

    $default  reduce using rule 128 (direct_declarator)


state 2

   89 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 89 (storage_class_specifier)


state 3

   90 storage_class_specifier: EXTERN .

    $default  reduce using rule 90 (storage_class_specifier)


state 4

   91 storage_class_specifier: STATIC .

    $default  reduce using rule 91 (storage_class_specifier)


state 5

   92 storage_class_specifier: AUTO .

    $default  reduce using rule 92 (storage_class_specifier)


state 6

   94 type_specifier: CHAR .

    $default  reduce using rule 94 (type_specifier)


state 7

   95 type_specifier: SHORT .

    $default  reduce using rule 95 (type_specifier)


state 8

   96 type_specifier: INT .

    $default  reduce using rule 96 (type_specifier)


state 9

   97 type_specifier: LONG .

    $default  reduce using rule 97 (type_specifier)


state 10

  100 type_specifier: SIGNED .

    $default  reduce using rule 100 (type_specifier)


state 11

  101 type_specifier: UNSIGNED .

    $default  reduce using rule 101 (type_specifier)


state 12

   98 type_specifier: FLOAT .

    $default  reduce using rule 98 (type_specifier)


state 13

   99 type_specifier: DOUBLE .

    $default  reduce using rule 99 (type_specifier)


state 14

  124 type_qualifier: CONST .

    $default  reduce using rule 124 (type_qualifier)


state 15

  125 type_qualifier: VOLATILE .

    $default  reduce using rule 125 (type_qualifier)


state 16

   93 type_specifier: VOID .

    $default  reduce using rule 93 (type_specifier)


state 17

  106 struct_or_union: STRUCT .

    $default  reduce using rule 106 (struct_or_union)


state 18

  107 struct_or_union: UNION .

    $default  reduce using rule 107 (struct_or_union)


state 19

  117 enum_specifier: ENUM . '{' enumerator_list '}'
  118               | ENUM . IDENTIFIER '{' enumerator_list '}'
  119               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 35
    '{'         shift, and go to state 36


state 20

  124 type_qualifier: . CONST
  125               | . VOLATILE
  134 pointer: . '*'  [IDENTIFIER, ')', ',']
  134        | '*' .  [IDENTIFIER, ')', ',']
  135        | . '*' type_qualifier
  135        | '*' . type_qualifier
  136        | . '*' pointer
  136        | '*' . pointer

    CONST     shift, and go to state 14
    VOLATILE  shift, and go to state 15
    '*'       shift, and go to state 20

    $default  reduce using rule 134 (pointer)

    type_qualifier  go to state 37
    pointer         go to state 38


state 21

  181 external_declaration: declaration .

    $default  reduce using rule 181 (external_declaration)


state 22

   78 declaration: declaration_specifiers . init_declarator_list ';'
   85 init_declarator_list: . init_declarator
   86                     | . init_declarator_list ',' init_declarator
   87 init_declarator: . declarator
   88                | . declarator ASSIGN_OP initializer
  126 declarator: . pointer direct_declarator
  127           | . direct_declarator
  128 direct_declarator: . IDENTIFIER
  129                  | . direct_declarator '[' constant_expression ']'
  130                  | . direct_declarator '[' ']'
  131                  | . direct_declarator '(' parameter_type_list ')'
  132                  | . direct_declarator '(' identifier_list ')'
  133                  | . direct_declarator '(' ')'
  134 pointer: . '*'
  135        | . '*' type_qualifier
  136        | . '*' pointer
  182 function_definition: declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 1
    '*'         shift, and go to state 20

    init_declarator_list  go to state 39
    init_declarator       go to state 40
    declarator            go to state 41
    direct_declarator     go to state 30
    pointer               go to state 31


state 23

   79 declaration_specifiers: . storage_class_specifier  [IDENTIFIER, ')', ',', '*']
   79                       | storage_class_specifier .  [IDENTIFIER, ')', ',', '*']
   80                       | . storage_class_specifier declaration_specifiers
   80                       | storage_class_specifier . declaration_specifiers
   81                       | . type_specifier
   82                       | . type_specifier declaration_specifiers
   83                       | . type_qualifier
   84                       | . type_qualifier declaration_specifiers
   89 storage_class_specifier: . TYPEDEF
   90                        | . EXTERN
   91                        | . STATIC
   92                        | . AUTO
   93 type_specifier: . VOID
   94               | . CHAR
   95               | . SHORT
   96               | . INT
   97               | . LONG
   98               | . FLOAT
   99               | . DOUBLE
  100               | . SIGNED
  101               | . UNSIGNED
  102               | . struct_or_union_specifier
  103               | . enum_specifier
  104 struct_or_union_specifier: . struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  105                          | . struct_or_union IDENTIFIER
  106 struct_or_union: . STRUCT
  107                | . UNION
  117 enum_specifier: . ENUM '{' enumerator_list '}'
  118               | . ENUM IDENTIFIER '{' enumerator_list '}'
  119               | . ENUM IDENTIFIER
  124 type_qualifier: . CONST
  125               | . VOLATILE

    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    STATIC    shift, and go to state 4
    AUTO      shift, and go to state 5
    CHAR      shift, and go to state 6
    SHORT     shift, and go to state 7
    INT       shift, and go to state 8
    LONG      shift, and go to state 9
    SIGNED    shift, and go to state 10
    UNSIGNED  shift, and go to state 11
    FLOAT     shift, and go to state 12
    DOUBLE    shift, and go to state 13
    CONST     shift, and go to state 14
    VOLATILE  shift, and go to state 15
    VOID      shift, and go to state 16
    STRUCT    shift, and go to state 17
    UNION     shift, and go to state 18
    ENUM      shift, and go to state 19

    $default  reduce using rule 79 (declaration_specifiers)

    declaration_specifiers     go to state 42
    storage_class_specifier    go to state 23
    type_specifier             go to state 24
    struct_or_union_specifier  go to state 25
    struct_or_union            go to state 26
    enum_specifier             go to state 27
    type_qualifier             go to state 28


state 24

   79 declaration_specifiers: . storage_class_specifier
   80                       | . storage_class_specifier declaration_specifiers
   81                       | . type_specifier  [IDENTIFIER, ')', ',', '*']
   81                       | type_specifier .  [IDENTIFIER, ')', ',', '*']
   82                       | . type_specifier declaration_specifiers
   82                       | type_specifier . declaration_specifiers
   83                       | . type_qualifier
   84                       | . type_qualifier declaration_specifiers
   89 storage_class_specifier: . TYPEDEF
   90                        | . EXTERN
   91                        | . STATIC
   92                        | . AUTO
   93 type_specifier: . VOID
   94               | . CHAR
   95               | . SHORT
   96               | . INT
   97               | . LONG
   98               | . FLOAT
   99               | . DOUBLE
  100               | . SIGNED
  101               | . UNSIGNED
  102               | . struct_or_union_specifier
  103               | . enum_specifier
  104 struct_or_union_specifier: . struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  105                          | . struct_or_union IDENTIFIER
  106 struct_or_union: . STRUCT
  107                | . UNION
  117 enum_specifier: . ENUM '{' enumerator_list '}'
  118               | . ENUM IDENTIFIER '{' enumerator_list '}'
  119               | . ENUM IDENTIFIER
  124 type_qualifier: . CONST
  125               | . VOLATILE

    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    STATIC    shift, and go to state 4
    AUTO      shift, and go to state 5
    CHAR      shift, and go to state 6
    SHORT     shift, and go to state 7
    INT       shift, and go to state 8
    LONG      shift, and go to state 9
    SIGNED    shift, and go to state 10
    UNSIGNED  shift, and go to state 11
    FLOAT     shift, and go to state 12
    DOUBLE    shift, and go to state 13
    CONST     shift, and go to state 14
    VOLATILE  shift, and go to state 15
    VOID      shift, and go to state 16
    STRUCT    shift, and go to state 17
    UNION     shift, and go to state 18
    ENUM      shift, and go to state 19

    $default  reduce using rule 81 (declaration_specifiers)

    declaration_specifiers     go to state 43
    storage_class_specifier    go to state 23
    type_specifier             go to state 24
    struct_or_union_specifier  go to state 25
    struct_or_union            go to state 26
    enum_specifier             go to state 27
    type_qualifier             go to state 28


state 25

  102 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 102 (type_specifier)


state 26

  104 struct_or_union_specifier: struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
  105                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 44


state 27

  103 type_specifier: enum_specifier .

    $default  reduce using rule 103 (type_specifier)


state 28

   79 declaration_specifiers: . storage_class_specifier
   80                       | . storage_class_specifier declaration_specifiers
   81                       | . type_specifier
   82                       | . type_specifier declaration_specifiers
   83                       | . type_qualifier  [IDENTIFIER, ')', ',', '*']
   83                       | type_qualifier .  [IDENTIFIER, ')', ',', '*']
   84                       | . type_qualifier declaration_specifiers
   84                       | type_qualifier . declaration_specifiers
   89 storage_class_specifier: . TYPEDEF
   90                        | . EXTERN
   91                        | . STATIC
   92                        | . AUTO
   93 type_specifier: . VOID
   94               | . CHAR
   95               | . SHORT
   96               | . INT
   97               | . LONG
   98               | . FLOAT
   99               | . DOUBLE
  100               | . SIGNED
  101               | . UNSIGNED
  102               | . struct_or_union_specifier
  103               | . enum_specifier
  104 struct_or_union_specifier: . struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  105                          | . struct_or_union IDENTIFIER
  106 struct_or_union: . STRUCT
  107                | . UNION
  117 enum_specifier: . ENUM '{' enumerator_list '}'
  118               | . ENUM IDENTIFIER '{' enumerator_list '}'
  119               | . ENUM IDENTIFIER
  124 type_qualifier: . CONST
  125               | . VOLATILE

    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    STATIC    shift, and go to state 4
    AUTO      shift, and go to state 5
    CHAR      shift, and go to state 6
    SHORT     shift, and go to state 7
    INT       shift, and go to state 8
    LONG      shift, and go to state 9
    SIGNED    shift, and go to state 10
    UNSIGNED  shift, and go to state 11
    FLOAT     shift, and go to state 12
    DOUBLE    shift, and go to state 13
    CONST     shift, and go to state 14
    VOLATILE  shift, and go to state 15
    VOID      shift, and go to state 16
    STRUCT    shift, and go to state 17
    UNION     shift, and go to state 18
    ENUM      shift, and go to state 19

    $default  reduce using rule 83 (declaration_specifiers)

    declaration_specifiers     go to state 45
    storage_class_specifier    go to state 23
    type_specifier             go to state 24
    struct_or_union_specifier  go to state 25
    struct_or_union            go to state 26
    enum_specifier             go to state 27
    type_qualifier             go to state 28


state 29

  159 compound_statement: . '{' '}'
  160                   | . '{' statement_list '}'
  161                   | . '{' declaration_list statement_list '}'
  183 function_definition: declarator . compound_statement

    '{'  shift, and go to state 46

    compound_statement  go to state 47


state 30

  127 declarator: direct_declarator .  [ASSIGN_OP, ')', ',', ';', '{']
  129 direct_declarator: direct_declarator . '[' constant_expression ']'
  130                  | direct_declarator . '[' ']'
  131                  | direct_declarator . '(' parameter_type_list ')'
  132                  | direct_declarator . '(' identifier_list ')'
  133                  | direct_declarator . '(' ')'

    '('  shift, and go to state 48
    '['  shift, and go to state 49

    $default  reduce using rule 127 (declarator)


state 31

  126 declarator: pointer . direct_declarator
  128 direct_declarator: . IDENTIFIER
  129                  | . direct_declarator '[' constant_expression ']'
  130                  | . direct_declarator '[' ']'
  131                  | . direct_declarator '(' parameter_type_list ')'
  132                  | . direct_declarator '(' identifier_list ')'
  133                  | . direct_declarator '(' ')'

    IDENTIFIER  shift, and go to state 1

    direct_declarator  go to state 50


state 32

    0 $accept: translation_unit . $end
   78 declaration: . declaration_specifiers init_declarator_list ';'
   79 declaration_specifiers: . storage_class_specifier
   80                       | . storage_class_specifier declaration_specifiers
   81                       | . type_specifier
   82                       | . type_specifier declaration_specifiers
   83                       | . type_qualifier
   84                       | . type_qualifier declaration_specifiers
   89 storage_class_specifier: . TYPEDEF
   90                        | . EXTERN
   91                        | . STATIC
   92                        | . AUTO
   93 type_specifier: . VOID
   94               | . CHAR
   95               | . SHORT
   96               | . INT
   97               | . LONG
   98               | . FLOAT
   99               | . DOUBLE
  100               | . SIGNED
  101               | . UNSIGNED
  102               | . struct_or_union_specifier
  103               | . enum_specifier
  104 struct_or_union_specifier: . struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  105                          | . struct_or_union IDENTIFIER
  106 struct_or_union: . STRUCT
  107                | . UNION
  117 enum_specifier: . ENUM '{' enumerator_list '}'
  118               | . ENUM IDENTIFIER '{' enumerator_list '}'
  119               | . ENUM IDENTIFIER
  124 type_qualifier: . CONST
  125               | . VOLATILE
  126 declarator: . pointer direct_declarator
  127           | . direct_declarator
  128 direct_declarator: . IDENTIFIER
  129                  | . direct_declarator '[' constant_expression ']'
  130                  | . direct_declarator '[' ']'
  131                  | . direct_declarator '(' parameter_type_list ')'
  132                  | . direct_declarator '(' identifier_list ')'
  133                  | . direct_declarator '(' ')'
  134 pointer: . '*'
  135        | . '*' type_qualifier
  136        | . '*' pointer
  179 translation_unit: translation_unit . external_declaration
  180 external_declaration: . function_definition
  181                     | . declaration
  182 function_definition: . declaration_specifiers declarator compound_statement
  183                    | . declarator compound_statement

    $end        shift, and go to state 51
    IDENTIFIER  shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    CHAR        shift, and go to state 6
    SHORT       shift, and go to state 7
    INT         shift, and go to state 8
    LONG        shift, and go to state 9
    SIGNED      shift, and go to state 10
    UNSIGNED    shift, and go to state 11
    FLOAT       shift, and go to state 12
    DOUBLE      shift, and go to state 13
    CONST       shift, and go to state 14
    VOLATILE    shift, and go to state 15
    VOID        shift, and go to state 16
    STRUCT      shift, and go to state 17
    UNION       shift, and go to state 18
    ENUM        shift, and go to state 19
    '*'         shift, and go to state 20

    declaration                go to state 21
    declaration_specifiers     go to state 22
    storage_class_specifier    go to state 23
    type_specifier             go to state 24
    struct_or_union_specifier  go to state 25
    struct_or_union            go to state 26
    enum_specifier             go to state 27
    type_qualifier             go to state 28
    declarator                 go to state 29
    direct_declarator          go to state 30
    pointer                    go to state 31
    external_declaration       go to state 52
    function_definition        go to state 34


state 33

  178 translation_unit: external_declaration .

    $default  reduce using rule 178 (translation_unit)


state 34

  180 external_declaration: function_definition .

    $default  reduce using rule 180 (external_declaration)


state 35

  118 enum_specifier: ENUM IDENTIFIER . '{' enumerator_list '}'
  119               | ENUM IDENTIFIER .  [IDENTIFIER, TYPEDEF, EXTERN, STATIC, AUTO, CHAR, SHORT, INT, LONG, SIGNED, UNSIGNED, FLOAT, DOUBLE, CONST, VOLATILE, VOID, STRUCT, UNION, ENUM, ')', ',', '*']

    '{'  shift, and go to state 53

    $default  reduce using rule 119 (enum_specifier)


state 36

  117 enum_specifier: ENUM '{' . enumerator_list '}'
  120 enumerator_list: . enumerator
  121                | . enumerator_list ',' enumerator
  122 enumerator: . IDENTIFIER
  123           | . IDENTIFIER ASSIGN_OP constant_expression

    IDENTIFIER  shift, and go to state 54

    enumerator_list  go to state 55
    enumerator       go to state 56


state 37

  135 pointer: '*' type_qualifier .

    $default  reduce using rule 135 (pointer)


state 38

  136 pointer: '*' pointer .

    $default  reduce using rule 136 (pointer)


state 39

   78 declaration: declaration_specifiers init_declarator_list . ';'
   86 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 57
    ';'  shift, and go to state 58

